<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/RIVLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/RIVHTVNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fecha"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/hora"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/total"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/fecha_actual"
                        android:id="@+id/RIVHTVFecha"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/hora_actual"
                        android:id="@+id/RIVHTVHora"
                        android:layout_weight="0.33"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/precio_item_cero"
                        android:id="@+id/RIVHTVTotal"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>