<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/RIVLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_margin="10dp"
                android:src="@drawable/ic_menu_producto"
                android:id="@+id/RIVCIVImagen"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <LinearLayout
                    android:weightSum="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/RIVTVNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_producto"
                        android:layout_weight="0.9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <Button
                        android:id="@+id/RIVBQuitar"
                        android:background="@color/rojoFuerte"
                        android:textColor="@color/blanco"
                        android:textSize="20sp"
                        android:text="X"
                        android:layout_weight="0.1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                </LinearLayout>
                
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/cantidad"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/precio"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/total"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:text="@string/precio_cero"
                        android:id="@+id/RIVETCantidad"
                        android:inputType="number"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <EditText
                        android:text="@string/precio_item_cero"
                        android:id="@+id/RIVETPrecio"
                        android:layout_weight="0.33"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:text="@string/precio_item_cero"
                        android:id="@+id/RIVTVTotal"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>