<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e8f5e9">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/AMIBProducto"
                        android:background="@color/blanco"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_menu_producto"/>
                    <TextView
                        android:textColor="@color/negro"
                        android:textStyle="bold"
                        android:layout_marginTop="-30dp"
                        android:text="@string/nombre_producto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/AMIBCliente"
                        android:background="@color/blanco"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_menu_persona"/>
                    <TextView
                        android:textColor="@color/negro"
                        android:textStyle="bold"
                        android:layout_marginTop="-30dp"
                        android:text="@string/nombre_cliente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/AMIBVenta"
                        android:background="@color/blanco"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_menu_precio"/>
                    <TextView
                        android:textColor="@color/negro"
                        android:textStyle="bold"
                        android:layout_marginTop="-30dp"
                        android:text="@string/nombre_venta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/AMIBVentaHistorial"
                        android:background="@color/blanco"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_menu_historial"/>
                    <TextView
                        android:textColor="@color/negro"
                        android:textStyle="bold"
                        android:layout_marginTop="-30dp"
                        android:text="@string/nombre_historial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>